--- a/settings.yml.j2
+++ b/settings.yml.j2
@@ -7,3 +7,5 @@ MYSQL_PASS: {{ MYSQL_PASS }}
 RABBIT_PASS: {{ RABBIT_PASS }}
 STACK_NAME: {{ STACK_NAME }}
 TARGET_DC: {{ TARGET_DC }}
+
+port: 80 # Default port, can be overridden on command line
