Add new variables to settings.yml.j2

--- a/settings.yml.j2
+++ b/settings.yml.j2
@@ -7,5 +7,10 @@ MYSQL_PASS: {{ MYSQL_PASS }}
 RABBIT_PASS: {{ RABBIT_PASS }}
 STACK_NAME: {{ STACK_NAME }}
 TARGET_DC: {{ TARGET_DC }}
+GITHUB_USER: {{ GITHUB_USER }}
+GITHUB_PASS: {{ GITHUB_PASS }}
+TEMPLATE_USER: {{ TEMPLATE_USER }}
+TEMPLATE_TENANT_ID: {{ TEMPLATE_TENANT_ID }}
+TEMPLATE_PASS: {{ TEMPLATE_PASS }}
 
 port: 80 # Default port, can be overridden on command line
